[package]
name = "aoc25"
version = "0.1.0"
edition = "2024"

[lib]
name = "aoc25"
path = "src/lib.rs"
doctest = false

[[bench]]
name = "codspeed"
harness = false


[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"

[dev-dependencies]
criterion = { version = "4.1.0", package = "codspeed-criterion-compat" }
divan = { version = "4.1.0", package = "codspeed-divan-compat" }
paste = "1.0.15"
ureq = "3.1.4"
