[package]
name = "aoc25"
version = "0.1.0"
edition = "2024"

[lib]
name = "aoc25"
path = "src/lib.rs"
doctest = false

[[bench]]
name = "codspeed"
harness = false


[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
atoi_simd = "0.17.0"
good_lp = { version="1.14.2", default-features=false, features=["microlp"]}
itoa = "1.0.15"
pathfinding = "4.14.0"
petgraph = "0.8.3"
rustc-hash = "2.1.1"
smallvec = "1.15.1"

[dev-dependencies]
divan = { version = "4.1.0", package = "codspeed-divan-compat" }
paste = "1.0.15"
ureq = "3.1.4"
